--- a/templates/stock.html
+++ b/templates/stock.html
@@ -11,5 +11,11 @@
 
 <img src="data:image/png;base64, {{opts.3}}">
 
+<form action="/stock/" method="get">
+        <label for="symbol"> Enter Stock Symbol: </label>
+        <input id="symbol" type="text" name="symbol" value="{{ search_symbol }}">
+        <input type="submit" value="submit">
+</form> 
+
 </body>
 </html>
