--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <html lang="ko">
+<head>
+<title>ChanHa's Test</title>
+</head>
 <body>
 
 <form action="/stock/" method="get">
         <label for="symbol"> Enter Stock Symbol: </label>
         <input id="symbol" type="text" name="symbol" value="{{ search_symbol }}">
         <input type="submit" value="submit">
-    </form> 
+</form> 
 
 </body>
 </html>
